Modifica_per_caricamento

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <title>Locate</title>
-        <link rel="stylesheet" href="/style_prova.css">
+        <link rel="stylesheet" href="css/style_prova.css">
     </head>
     <body>
         <ul id="navbar">
-            <li style="float:left"><a href="/index.html">UniRent</a></li>
+            <li style="float:left"><a href="index.html">UniRent</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="/singup.html">Sing Up</a></li>
         </ul>
@@ -25,7 +25,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec enim sem, fermentum at velit nec, luctus tempor justo. Maecenas lacinia nisi eu dapibus mollis. Duis consequat ullamcorper augue. Maecenas congue, ipsum gravida ullamcorper volutpat, lectus eros dapibus nibh, eget aliquam urna est sit amet sapien. Nam quam enim, rhoncus nec dolor id, facilisis lacinia ipsum. Pellentesque vel urna vehicula, maximus odio in, aliquam augue. Vivamus eget nisl molestie, euismod enim sit amet, cursus nisl.</p>
             </div>
             <div class="img">
-                <img src="media/casa.png" width="50%">
+                <img src="img/casa.png" width="50%">
             </div>
         </div>
         
