--- a/public/template.html
+++ b/public/template.html
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="w3-third w3-container w3-margin-bottom">
-          <img src="/public/img/20210505102417-4.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+          <img src="/public/img/logo_senza_sfondo.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p class="price "><b class="oldprice">€350</b><b class="discounted">€310</b></p>
             <p><b>Lorem Ipsum</b></p>
