--- a/public/temeplate_test.html
+++ b/public/temeplate_test.html
@@ -20,7 +20,7 @@
         <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
           <i class="fa fa-remove"></i>
         </a>
-        <img src="/public/img/mlsxscfm.png" style="width:80%;" class="w3-round" href="/public/index.html"><br><br>
+        <img src="/public/img/logo_senza_sfondo.png" style="width:80%;" class="w3-round" href="/public/index.html"><br><br>
         <h4><b>Filtri ricerca:</b></h4>
       </div>
       
@@ -64,12 +64,16 @@
       <!-- Header -->
       <header id="portfolio">
         <!-- Profilo-->
-        <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn"><p class="profile-name">Nicolò Raccichini</p> <img src="/public/img/profile_pic.jpg" style="width:65px;" class="w3-circle w3-right my-margin"></button>
-            <div id="myDropdown" class="dropdown-content">
-              <a href="#home">Home</a>
-              <a href="#about">About</a>
-              <a href="#contact">Contact</a>
+        <div class="dropdown" onclick="dropdown()">
+            <button  class="dropbtn">
+                <img src="/public/img/right-arrow.png" width="20px" class="profile-name arrow " id="profile-arrow" >
+                <p class="profile-name" >Nicolò Raccichini</p> 
+                <img src="/public/img/profile_pic.jpg" style="width:65px;" class="w3-circle w3-right my-margin">
+            </button>
+            <div id="myDropdown" class="dropdown-content animate">
+              <a href="#home">Profilo</a>
+              <a href="#about">Messaggi</a>
+              <a href="#contact">Logout</a>
             </div>
           </div>
         <!-- Searchbar -->
