modifiche per caricamento su server

--- a/public/home_page.html
+++ b/public/home_page.html
@@ -11,7 +11,7 @@
     <body>
         
         <ul id="navbar">
-            <li style="float:left"><a href="index.html">UniRent</a></li>
+            <li style="float:left"><a href="home_page.html">UniRent</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="/singup.html">Sing Up</a></li>
         </ul>
